# nlp-qual-um

./: .gitignore  README.md  TODO.md  conda.yaml  pyproject.toml  run_train.sbatch.sh
conf/: README.md  mapping.xlsx
notebooks/: um-data-exploration.ipynb  um-data-extraction.ipynb  um_data_raw_eval_results.ipynb
slurm/: mlflow.sbatch.sh  test.sbatch.sh  train.sbatch.sh
src/: config.py  make_dataset.py  randomtrial.py  raytrain.py  stupidtrain.py  train.py  train_helpers.py  um_make_dataset.py  um_run_model.py
util/: eval_all_um_data.sh  mlflow.sbatch.sh  mlflow_slurm.sh  port_forward.sh  rsearch_exp.sbatch.sh  rsearch_exp.sh  rtrial_exp.sh
