[tool.poetry]
name = "nlp-qual-um"
version = "0.0.1"
description = "Upgrading nlp-qual to use more modern MLops tooling"
authors = ["Maxwell Spadafore <maxspad@umich.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
transformers = "^4.46.1"
ray = {extras = ["tune"], version = "^2.38.0"}
mlflow = "^2.17.2"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.0"
streamlit = "^1.39.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
